--- a/p8105_hw2_ei2291.md
+++ b/p8105_hw2_ei2291.md
@@ -129,3 +129,61 @@ and the `unemployment.csv` is on unemployment rates in the U.S. All
 datasets show what happened each month throughout those years. We then
 cleaned and merged all by year and month. The key variables are: `year`,
 `month`, `prezident`,`close`, and `unemployment`.
+
+\##Problem 2
+
+``` r
+library(tidyverse)
+library(readxl)
+```
+
+Clean Mr. Trash Wheel dataset
+
+``` r
+Mr_trash_df=
+  read_excel("trash_wheel_collection_data.xlsx",
+             sheet="Mr. Trash Wheel",
+             skip=1) |> 
+  janitor::clean_names() |> 
+  filter(!is.na(dumpster)) |> 
+  mutate(sports_balls=as.integer(round(sports_balls)),
+         year=as.integer(year)
+         )
+```
+
+    ## New names:
+    ## • `` -> `...15`
+    ## • `` -> `...16`
+
+Clean Professor Trash Wheel dataset
+
+``` r
+Professor_trash_df=
+  read_excel("trash_wheel_collection_data.xlsx", sheet= "Professor Trash Wheel", skip=1) |> 
+  janitor::clean_names() |> 
+  filter(!is.na(dumpster)) |> 
+  mutate(wheel="Professor Trash Wheel",
+         year=as.integer(year))
+```
+
+Clean Gwynnda Trash Wheel dataset
+
+``` r
+Gwynnda_trash_df=
+  read_excel("trash_wheel_collection_data.xlsx", sheet= "Gwynnda Trash Wheel", skip=1) |> 
+  janitor::clean_names() |> 
+  filter(!is.na(dumpster)) |> 
+  mutate(wheel="Gwynnda",
+         year=as.integer(year))
+```
+
+Combining all datasets
+
+``` r
+trash_df=
+  bind_rows(Mr_trash_df, 
+            Professor_trash_df, 
+            Gwynnda_trash_df) |> 
+  relocate(wheel) |> 
+  arrange(wheel, year, month)
+```
