--- a/p8105_hw2_ei2291.md
+++ b/p8105_hw2_ei2291.md
@@ -148,7 +148,8 @@ Mr_trash_df=
   filter(!is.na(dumpster)) |> 
   mutate(sports_balls=as.integer(round(sports_balls)),
          year=as.integer(year)
-         )
+         ) |> 
+  select(-x15,-x16)
 ```
 
     ## New names:
@@ -187,3 +188,49 @@ trash_df=
   relocate(wheel) |> 
   arrange(wheel, year, month)
 ```
+
+Check for observation in `trash_df` and key variables
+
+``` r
+dim(trash_df)
+```
+
+    ## [1] 1033   15
+
+``` r
+names(trash_df)
+```
+
+    ##  [1] "wheel"              "dumpster"           "month"             
+    ##  [4] "year"               "date"               "weight_tons"       
+    ##  [7] "volume_cubic_yards" "plastic_bottles"    "polystyrene"       
+    ## [10] "cigarette_butts"    "glass_bottles"      "plastic_bags"      
+    ## [13] "wrappers"           "sports_balls"       "homes_powered"
+
+There are 1033 observations and 15 variables. Key variables are `wheel`,
+`dumpster`, `month`, `year`, `weight_tons`, `cigarette_butts`, and
+`sports_balls`. There are other variables that I didn’t mention that can
+be helpful for the analyses.
+
+Total weight of trash collected by Prof. Trash
+
+``` r
+total_weight_Professor_trash_df=
+  filter(trash_df, wheel=="Professor Trash Wheel") |> 
+  summarize(total_weight= sum(weight_tons, na.rm=TRUE))
+```
+
+The total weight of trash collected by Professor Trash Wheel is 246.74
+tons.
+
+Total no. of cigarette butts collected by Gwynnda (June 2022)
+
+``` r
+total_cigarette_butts_Gwynnda_trash_df=
+  filter(trash_df, 
+         wheel=="Gwynnda",    month=="June", year==2022) |>
+  summarize(total_cigarette_butts = sum (cigarette_butts, na.rm=TRUE))
+```
+
+The total number of cigarette butts collected by Gwynnda in June 2022
+was 18120 butts.
