--- a/p8105_hw2_ei2291.Rmd
+++ b/p8105_hw2_ei2291.Rmd
@@ -108,7 +108,8 @@ Mr_trash_df=
   filter(!is.na(dumpster)) |> 
   mutate(sports_balls=as.integer(round(sports_balls)),
          year=as.integer(year)
-         )
+         ) |> 
+  select(-x15,-x16)
   
 ```
 
@@ -145,11 +146,35 @@ trash_df=
   arrange(wheel, year, month)
 ```
 
+Check for observation in `trash_df` and key variables
 
+```{r}
+dim(trash_df)
+names(trash_df)
+```
+There are 1033 observations and 15 variables. Key variables are `wheel`, `dumpster`, `month`, `year`, `weight_tons`, `cigarette_butts`, and `sports_balls`. There are other variables that I didn't mention that can be helpful for the analyses. 
 
+Total weight of trash collected by Prof. Trash
 
+```{r}
+total_weight_Professor_trash_df=
+  filter(trash_df, wheel=="Professor Trash Wheel") |> 
+  summarize(total_weight= sum(weight_tons, na.rm=TRUE))
+   
+```
 
+The total weight of trash collected by Professor Trash Wheel is 246.74 tons.
 
+Total no. of cigarette butts collected by Gwynnda (June 2022)
+
+```{r}
+total_cigarette_butts_Gwynnda_trash_df=
+  filter(trash_df, 
+         wheel=="Gwynnda",    month=="June", year==2022) |>
+  summarize(total_cigarette_butts = sum (cigarette_butts, na.rm=TRUE))
+```
+
+The total number of cigarette butts collected by Gwynnda in June 2022 was 18120 butts.
 
 
 
