--- a/p8105_hw2_ei2291.md
+++ b/p8105_hw2_ei2291.md
@@ -185,7 +185,7 @@ trash_df=
   bind_rows(Mr_trash_df, 
             Professor_trash_df, 
             Gwynnda_trash_df) |> 
-  relocate(wheel) |> 
+  relocate(wheel, year, month) |> 
   arrange(wheel, year, month)
 ```
 
@@ -201,8 +201,8 @@ dim(trash_df)
 names(trash_df)
 ```
 
-    ##  [1] "wheel"              "dumpster"           "month"             
-    ##  [4] "year"               "date"               "weight_tons"       
+    ##  [1] "wheel"              "year"               "month"             
+    ##  [4] "dumpster"           "date"               "weight_tons"       
     ##  [7] "volume_cubic_yards" "plastic_bottles"    "polystyrene"       
     ## [10] "cigarette_butts"    "glass_bottles"      "plastic_bags"      
     ## [13] "wrappers"           "sports_balls"       "homes_powered"
@@ -234,3 +234,100 @@ total_cigarette_butts_Gwynnda_trash_df=
 
 The total number of cigarette butts collected by Gwynnda in June 2022
 was 18120 butts.
+
+\##Problem 3
+
+``` r
+library(tidyverse)
+```
+
+Import and clean dataset
+
+``` r
+zipcodes_county_df=
+  read_csv("Zip Codes.csv") |> 
+  janitor::clean_names() |> 
+  mutate(
+    county = case_when(
+    county == "New York" ~ "Manhattan",
+    county == "Kings" ~ "Brooklyn",
+    county == "Richmond" ~ "Staten Island",
+    TRUE ~ county)
+  ) |> 
+  distinct(zip_code,.keep_all=TRUE)
+```
+
+    ## Rows: 322 Columns: 7
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr (4): County, County Code, File Date, Neighborhood
+    ## dbl (3): State FIPS, County FIPS, ZipCode
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Import and clean dataset2
+
+``` r
+zipcodes_neighborhood_df=
+  read_csv("Zip codes neighborhood.csv") |> 
+  janitor::clean_names() |> 
+  pivot_longer(
+    cols = starts_with ("x20"),
+    names_to= "date",
+    values_to = "zori"
+  ) |> 
+  rename(county=county_name,
+         zip_code=region_id) |> 
+  mutate(date = lubridate::ymd(str_remove(date, "x")),
+         county = case_when(
+    county == "New York County" ~ "Manhattan",
+    county == "Kings County" ~ "Brooklyn",
+    county == "Richmond County" ~ "Staten Island",
+    county == "Queens County" ~ "Queens",
+    county == "Bronx County" ~ "Bronx",
+    TRUE ~ county))
+```
+
+    ## Rows: 149 Columns: 125
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## chr   (6): RegionType, StateName, State, City, Metro, CountyName
+    ## dbl (119): RegionID, SizeRank, RegionName, 2015-01-31, 2015-02-28, 2015-03-3...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+Join datasets
+
+``` r
+combined_df=
+  left_join(zipcodes_neighborhood_df, zipcodes_county_df, by="zip_code") |> 
+  select(-county.y) |> 
+  rename(county = county.x) |> 
+  relocate(zip_code,county) |> 
+  arrange(zip_code, county)
+```
+
+No. of observations, unique zip codes, and unique neighborhoods
+
+``` r
+nrow(combined_df)
+```
+
+    ## [1] 17284
+
+``` r
+n_distinct(combined_df$zip_code)
+```
+
+    ## [1] 149
+
+``` r
+n_distinct(combined_df$region_name)
+```
+
+    ## [1] 149
+
+There are 17,284 total number of observations; 149 number of unique
+zipcodes, and 149 number of unique neighborhoods.
