finished off problem 3

--- a/p8105_hw2_ei2291.md
+++ b/p8105_hw2_ei2291.md
@@ -331,3 +331,61 @@ n_distinct(combined_df$region_name)
 
 There are 17,284 total number of observations; 149 number of unique
 zipcodes, and 149 number of unique neighborhoods.
+
+``` r
+missing_zip_df =
+  anti_join(zipcodes_county_df, combined_df, by= "zip_code")
+
+missing_zip_df |> 
+  count(county_code, sort=TRUE)
+```
+
+    ## # A tibble: 5 × 2
+    ##   county_code     n
+    ##   <chr>       <int>
+    ## 1 061           147
+    ## 2 081            81
+    ## 3 047            48
+    ## 4 005            30
+    ## 5 085            14
+
+``` r
+missing_zip_df |> 
+  count(county,sort=TRUE )
+```
+
+    ## # A tibble: 5 × 2
+    ##   county            n
+    ##   <chr>         <int>
+    ## 1 Manhattan       147
+    ## 2 Queens           81
+    ## 3 Brooklyn         48
+    ## 4 Bronx            30
+    ## 5 Staten Island    14
+
+When comparing the dataset, county codes with the most missing zip codes
+in zillow are county 061, 081, 047, 005, and 085; which are Manhattan,
+Queens, Brooklyn, Bronx, and Staten Island, respectively. Some reasons
+why they’re missing/excluded in zillow could be because the zipcodes may
+be recently reassigned or new and not yet on zillow, or maybe the
+zipcodes might be more industrial area and little to no residential
+housing.
+
+``` r
+covid_df=
+  combined_df |> 
+  filter(lubridate::year(date) %in% c(2020, 2021) &
+         lubridate::month(date) ==1) |> 
+  select(zip_code, county,region_name, date, zori) |> 
+  pivot_wider(
+    names_from =date,
+    values_from=zori
+  ) |> 
+  mutate(drop=`2020-01-31` - `2021-01-31`) |> 
+  arrange (drop) |> 
+  slice_min(drop, n=10)
+```
+
+The table provides the 10 zipcodes that had the largest drop in rental
+prices from January of 2020 to January of 2021. Queens, Bronx, and
+Brooklyn had the biggest decrease.
